--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "plushtml",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "plushtml allows you to write a HTML document structure with a little twist",
   "homepage": "https://github.com/kittender/plushtml#readme",
-  "main": "plushtml.min.js",
+  "main": "plushtml.js",
   "scripts": {
     "test": "plushtml.test.js"
   },
@@ -14,5 +14,8 @@
     "plush"
   ],
   "author": "Kittender",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "chai": "^4.1.2"
+  }
 }
